--- a/requirements.txt
+++ b/requirements.txt
@@ -1,80 +1,70 @@
-anyio==3.6.1
-attrs==19.3.0
-Automat==0.8.0
-blinker==1.4
-certifi==2019.11.28
-chardet==3.0.4
-Click==7.0
-cloud-init==21.1
-colorama==0.4.3
-command-not-found==0.3
-configobj==5.0.6
-constantly==15.1.0
-cryptography==2.8
-dbus-python==1.2.16
-distro==1.4.0
-distro-info===0.23ubuntu1
-entrypoints==0.3
-future==0.18.2
-gkeepapi==0.14.2
-gpsoauth==1.0.2
-h11==0.12.0
-httpcore==0.15.0
-httplib2==0.14.0
-httpx==0.23.0
-hyperlink==19.0.0
-idna==2.8
-img2pdf==0.3.3
-importlib-metadata==1.5.0
-incremental==16.10.1
-Jinja2==2.10.1
-jsonpatch==1.22
-jsonpointer==2.0
-jsonschema==3.2.0
-keyring==18.0.1
-keyrings.alt==4.1.1
-language-selector==0.1
-launchpadlib==1.10.13
-lazr.restfulclient==0.14.2
-lazr.uri==1.0.3
-MarkupSafe==1.1.0
-more-itertools==4.2.0
-netifaces==0.10.4
-notion-client==1.0.0
-oauthlib==3.1.0
-olefile==0.46
-pexpect==4.6.0
-Pillow==7.0.0
-pyasn1==0.4.2
-pyasn1-modules==0.2.1
-pycryptodomex==3.15.0
-PyGObject==3.36.0
-PyHamcrest==1.9.0
-PyJWT==1.7.1
-pymacaroons==0.13.0
-PyNaCl==1.3.0
-pyOpenSSL==19.0.0
-pyrsistent==0.15.5
-pyserial==3.4
-python-apt==2.0.0+ubuntu0.20.4.5
-python-debian===0.1.36ubuntu1
-PyYAML==5.3.1
-requests==2.22.0
-requests-unixsocket==0.2.0
-rfc3986==1.5.0
-SecretStorage==2.3.1
-service-identity==18.1.0
-simplejson==3.16.0
-six==1.14.0
-sniffio==1.2.0
-sos==4.1
-ssh-import-id==5.10
-systemd-python==234
-Twisted==18.9.0
-ubuntu-advantage-tools==27.0
-ufw==0.36
-unattended-upgrades==0.1
-urllib3==1.25.8
-wadllib==1.3.3
-zipp==1.0.0
-zope.interface==4.7.1
+argon2-cffi==21.3.0
+argon2-cffi-bindings==21.2.0
+asttokens==2.0.5
+attrs==21.4.0
+backcall==0.2.0
+black==22.1.0
+bleach==4.1.0
+cffi==1.15.0
+click==8.0.3
+colorama==0.4.4
+cycler==0.11.0
+Cython==0.29.24
+debugpy==1.5.1
+decorator==5.1.1
+defusedxml==0.7.1
+entrypoints==0.4
+executing==0.8.2
+hurry.filesize==0.9
+jedi==0.18.1
+Jinja2==3.0.3
+joblib==1.1.0
+jsonschema==4.4.0
+kiwisolver==1.3.2
+MarkupSafe==2.0.1
+matplotlib==3.4.3
+matplotlib-inline==0.1.3
+mistune==0.8.4
+mypy-extensions==0.4.3
+nest-asyncio==1.5.4
+numpy==1.21.3
+packaging==21.3
+pandocfilters==1.5.0
+parso==0.8.3
+pathspec==0.9.0
+pickleshare==0.7.5
+Pillow==8.4.0
+platformdirs==2.5.0
+POT==0.8.0
+prometheus-client==0.13.1
+prompt-toolkit==3.0.28
+pure-eval==0.2.2
+pycparser==2.21
+Pygments==2.11.2
+pyparsing==3.0.4
+pyrsistent==0.18.1
+python-dateutil==2.8.2
+pywin32==303
+pywinpty==2.0.2
+pyzmq==22.3.0
+qtconsole==5.2.2
+QtPy==2.0.1
+scikit-learn==1.0.2
+scipy==1.7.2
+Send2Trash==1.8.0
+six==1.16.0
+stack-data==0.1.4
+terminado==0.13.1
+testpath==0.5.0
+threadpoolctl==3.0.0
+tomli==2.0.1
+torch==1.10.0+cu113
+torchaudio==0.10.0+cu113
+torchvision==0.11.1+cu113
+tornado==6.1
+tqdm==4.64.0
+traitlets==5.1.1
+typing-extensions==3.10.0.2
+wcwidth==0.2.5
+webencodings==0.5.1
+widgetsnbextension==3.5.2
