--- a/requirements.txt
+++ b/requirements.txt
@@ -1,70 +1,7 @@
-argon2-cffi==21.3.0
-argon2-cffi-bindings==21.2.0
-asttokens==2.0.5
-attrs==21.4.0
-backcall==0.2.0
-black==22.1.0
-bleach==4.1.0
-cffi==1.15.0
-click==8.0.3
-colorama==0.4.4
-cycler==0.11.0
-Cython==0.29.24
-debugpy==1.5.1
-decorator==5.1.1
-defusedxml==0.7.1
-entrypoints==0.4
-executing==0.8.2
-hurry.filesize==0.9
-jedi==0.18.1
-Jinja2==3.0.3
-joblib==1.1.0
-jsonschema==4.4.0
-kiwisolver==1.3.2
-MarkupSafe==2.0.1
-matplotlib==3.4.3
-matplotlib-inline==0.1.3
-mistune==0.8.4
-mypy-extensions==0.4.3
-nest-asyncio==1.5.4
-numpy==1.21.3
-packaging==21.3
-pandocfilters==1.5.0
-parso==0.8.3
-pathspec==0.9.0
-pickleshare==0.7.5
-Pillow==8.4.0
-platformdirs==2.5.0
-POT==0.8.0
-prometheus-client==0.13.1
-prompt-toolkit==3.0.28
-pure-eval==0.2.2
-pycparser==2.21
-Pygments==2.11.2
-pyparsing==3.0.4
-pyrsistent==0.18.1
-python-dateutil==2.8.2
-pywin32==303
-pywinpty==2.0.2
-pyzmq==22.3.0
-qtconsole==5.2.2
-QtPy==2.0.1
-scikit-learn==1.0.2
-scipy==1.7.2
-Send2Trash==1.8.0
-six==1.16.0
-stack-data==0.1.4
-terminado==0.13.1
-testpath==0.5.0
-threadpoolctl==3.0.0
-tomli==2.0.1
-torch==1.10.0+cu113
-torchaudio==0.10.0+cu113
-torchvision==0.11.1+cu113
-tornado==6.1
-tqdm==4.64.0
-traitlets==5.1.1
-typing-extensions==3.10.0.2
-wcwidth==0.2.5
-webencodings==0.5.1
-widgetsnbextension==3.5.2
+numpy
+matplotlib
+torch
+torchaudio
+torchvision
+POT
+tqdm
